package chap04.repository;

import chap04.model.Post;

public interface PostRepository {

    public void save(Post post);
}
