package chap04.service;

import chap04.model.Post;

public interface PostService {

    public void post(Post post);
}
